syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "github.com/nayotta/metathings/proto/deviced";

import "model.proto";

message PatchFlowSetRequest {
	OpFlowSet flow_set = 1;
}

message PatchFlowSetResponse {
	FlowSet flow_set = 1;
}
